successfully defined model